pio: add board definition

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,3 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
+[env:qtpy]
+platform = https://github.com/platformio/platform-atmelsam#develop
+board = adafruit_qt_py_m0
+framework = arduino
