--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,4 @@
 platform = https://github.com/platformio/platform-atmelsam#develop
 board = adafruit_qt_py_m0
 framework = arduino
-lib_deps = JC_Button, Adafruit_Neopixel
+lib_deps = JC_Button, Adafruit Neopixel
