--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:qtpy]
-platform = https://github.com/platformio/platform-atmelsam#develop
+platform = atmelsam
 board = adafruit_qt_py_m0
 framework = arduino
 lib_deps = JC_Button, Adafruit Neopixel
